syntax = "proto3";

package bnet;

import "messages/vec3.proto";

option java_package = "net.bestia.bnet.proto";
option java_outer_classname = "PathComponentSMSGProto";

message PathComponentSMSG {
  fixed64 entity_id = 1;
  repeated Vec3 path = 2;
}