syntax = "proto3";

package bnet;

import "messages/vec3.proto";

option java_package = "net.bestia.bnet.proto";
option java_outer_classname = "PositionComponentProto";

message PositionComponent {
  fixed64 entity_id = 1;
  Vec3 position = 2;
}