syntax = "proto3";

package bnet;

option java_package = "net.bestia.bnet.proto";
option java_outer_classname = "SpeedComponentSMSGProto";

message SpeedComponentSMSG {
  fixed64 entity_id = 1;
  float speed = 2;
}